--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3002,6 +3002,84 @@ section.lazy-placeholder:after {
 .cid-rZZ1xXunbP .content-slider-wrap {
   width: 85%;
 }
+.cid-s0dZit597T {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #232323;
+}
+.cid-s0dZit597T P {
+  color: #767676;
+}
+.cid-s0dZit597T H1 {
+  color: #efefef;
+}
+.cid-s0dZit597T .mbr-text,
+.cid-s0dZit597T .mbr-section-btn {
+  color: #efefef;
+}
+.cid-s0dZjzbT5L {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+  overflow: hidden;
+}
+.cid-s0dZjzbT5L .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-s0dZjzbT5L .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-s0dZjzbT5L .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-s0dZjzbT5L .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-s0dZjzbT5L .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-s0dZjzbT5L .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-s0dZjzbT5L .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-s0dZjzbT5L .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-s0dZjzbT5L .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
 .cid-rZZ1tBtkM4 {
   padding-top: 90px;
   padding-bottom: 0px;
@@ -3071,6 +3149,70 @@ section.lazy-placeholder:after {
 }
 @media (max-width: 768px) {
   .cid-rZZ1Ftwybz .video-block {
+    width: 100% !important;
+  }
+}
+.cid-s0dZlnHo23 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-s0dZlnHo23 P {
+  color: #767676;
+}
+.cid-s0dZlnHo23 H1 {
+  color: #efefef;
+}
+.cid-s0dZlnHo23 .mbr-text,
+.cid-s0dZlnHo23 .mbr-section-btn {
+  color: #efefef;
+}
+.cid-s0dZlnHo23 H3 {
+  color: #ffffff;
+}
+.cid-s0dZms3OtB {
+  background: #232323;
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background: linear-gradient(0deg, #232323, #232323);
+}
+.cid-s0dZms3OtB .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-s0dZms3OtB .video-block {
+    width: 100% !important;
+  }
+}
+.cid-s0dZnlWhBU {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-s0dZnlWhBU P {
+  color: #767676;
+}
+.cid-s0dZnlWhBU H1 {
+  color: #efefef;
+}
+.cid-s0dZnlWhBU .mbr-text,
+.cid-s0dZnlWhBU .mbr-section-btn {
+  color: #efefef;
+}
+.cid-s0dZnlWhBU H3 {
+  color: #ffffff;
+}
+.cid-s0dZnNN6Iw {
+  background: #232323;
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background: linear-gradient(0deg, #232323, #232323);
+}
+.cid-s0dZnNN6Iw .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-s0dZnNN6Iw .video-block {
     width: 100% !important;
   }
 }
