--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4526,6 +4526,69 @@ section.lazy-placeholder:after {
 .cid-s0eKvQB40E .mbr-text {
   color: #efefef;
 }
+.cid-s11x3O0ERF {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+  overflow: hidden;
+}
+.cid-s11x3O0ERF .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-s11x3O0ERF .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-s11x3O0ERF .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-s11x3O0ERF .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-s11x3O0ERF .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-s11x3O0ERF .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-s11x3O0ERF .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-s11x3O0ERF .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-s11x3O0ERF .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
 .cid-s0eKw95T9D {
   padding-top: 0px;
   padding-bottom: 0px;
