--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -573,32 +573,6 @@ blockquote {
 .mbr-form .input-group-btn button[type="submit"]:hover {
   box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
 }
-.form2 .form-control {
-  border-top-left-radius: 100px;
-  border-bottom-left-radius: 100px;
-}
-.form2 .input-group-btn a.btn {
-  border-top-left-radius: 0 !important;
-  border-bottom-left-radius: 0 !important;
-}
-.form2 .input-group-btn button[type="submit"] {
-  border-top-left-radius: 0 !important;
-  border-bottom-left-radius: 0 !important;
-}
-.form3 input[type="email"] {
-  border-radius: 100px !important;
-}
-@media (max-width: 349px) {
-  .form2 input[type="email"] {
-    border-radius: 100px !important;
-  }
-  .form2 .input-group-btn a.btn {
-    border-radius: 100px !important;
-  }
-  .form2 .input-group-btn button[type="submit"] {
-    border-radius: 100px !important;
-  }
-}
 @media (max-width: 767px) {
   .btn {
     font-size: .75rem !important;
@@ -1099,15 +1073,74 @@ section.lazy-placeholder:after {
 .cid-rS1uWSJBe8 .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rYg237X8UN {
+.cid-sdU4p6dizD {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-se5rKtYqFf {
+  padding-top: 60px;
+  padding-bottom: 45px;
+  background-color: #232323;
+}
+.cid-se5rIV0W0v {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-se5rIV0W0v .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-se5rIV0W0v .section-text {
+  padding: 2rem 0;
+}
+.cid-se5rIV0W0v .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-se5rIV0W0v .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-sdU4ydRmdi {
   padding-top: 120px;
-  padding-bottom: 30px;
+  padding-bottom: 15px;
+  background-color: #232323;
+}
+.cid-sdU5j5j0oZ {
+  background: #232323;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-sdU5j5j0oZ .image-block {
+  margin: auto;
+}
+.cid-sdU5j5j0oZ figcaption {
+  position: relative;
+}
+.cid-sdU5j5j0oZ figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-sdU5j5j0oZ .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rYg237X8UN {
+  padding-top: 135px;
+  padding-bottom: 15px;
   background-color: #232323;
 }
 .cid-s0aqdJAe9a {
   background: #232323;
   padding-top: 0px;
-  padding-bottom: 105px;
+  padding-bottom: 120px;
 }
 .cid-s0aqdJAe9a .video-block {
   margin: auto;
@@ -1119,7 +1152,7 @@ section.lazy-placeholder:after {
 }
 .cid-s1mKWD94EW {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 120px;
   background-color: #232323;
 }
 .cid-rYfwGXqYcX .navbar {
@@ -1513,7 +1546,7 @@ section.lazy-placeholder:after {
 }
 .cid-rZYJEeUhm3 {
   padding-top: 120px;
-  padding-bottom: 0px;
+  padding-bottom: 120px;
   background-color: #232323;
 }
 .cid-rZYJEeUhm3 .mbr-section-subtitle {
