--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1106,6 +1106,72 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
+.cid-slbWRj1etB {
+  padding-top: 1rem;
+  padding-bottom: 6rem;
+  background: #232323;
+}
+.cid-slbWRj1etB .team-card {
+  margin-bottom: 2rem;
+  transition: all 0.3s;
+}
+.cid-slbWRj1etB .team-card:hover {
+  transform: translateY(-10px);
+}
+.cid-slbWRj1etB .card-wrap {
+  background: #ffffff;
+  border-radius: 4px;
+}
+@media (max-width: 991px) {
+  .cid-slbWRj1etB .card-wrap {
+    margin-bottom: 2rem;
+  }
+}
+.cid-slbWRj1etB .card-wrap .image-wrap img {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .cid-slbWRj1etB .card-wrap .content-wrap {
+    padding: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-slbWRj1etB .card-wrap .content-wrap {
+    padding: 1rem;
+  }
+}
+.cid-slbWRj1etB .social-row {
+  text-align: center;
+}
+.cid-slbWRj1etB .social-row .soc-item {
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin-right: 0.6rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  border: 2px solid #6592e6;
+  transition: all 0.3s;
+}
+.cid-slbWRj1etB .social-row .soc-item .mbr-iconfont {
+  transition: all 0.3s;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: #6592e6;
+  font-size: 1.5rem;
+}
+.cid-slbWRj1etB .social-row .soc-item:hover {
+  background-color: #6592e6;
+}
+.cid-slbWRj1etB .social-row .soc-item:hover .mbr-iconfont {
+  color: #ffffff;
+}
+.cid-slbWRj1etB .card-text,
+.cid-slbWRj1etB .mbr-section-btn,
+.cid-slbWRj1etB .social-row {
+  text-align: center;
+}
 .cid-rYg237X8UN {
   padding-top: 135px;
   padding-bottom: 15px;
